# connectwidgets-python

./: .gitignore  Makefile  docker-compose.yml  justfile  pyproject.toml
connectwidgets/: __init__.py  __main__.py
docs/: .gitignore  _quarto.yml  about.ipynb  about.qmd
setup-rsconnect/: rstudio-connect.gcfg
